Fix MC 26.x.y compatibility, modernize build, remove deprecated APIs
- Rewrite McVersionHandler to handle new year-based versioning (26.x.y)
- Remove dead MVdW PlaceholderAPI dependency (repo offline)
- Bump build to Java 21, latest Spigot/Gson/bStats/PAPI
- Replace bundled Metrics.java with shaded bstats-bukkit dependency
- Use reflection for TimeSkipEvent.SkipReason (Paper 26.1 changed this)
- Remove deprecated APIs and dead pre-1.21 code paths
- Null-safe config access in SleepHandler event handlers
- Replace deprecated JsonParser().parse() and new URL(...)